--- a/app/views/channels/_message.erb
+++ b/app/views/channels/_message.erb
@@ -5,8 +5,8 @@ style="border-left:1px solid #347acb;"
 <% end %>
 >
 <% if message.poster == @user.alias %>
-    <span class="buttons"><%= link_to 'X', [@channel, message], :confirm => "Are you sure?",
-        :method => :delete, :remote => true %></span>
+    <span class="buttons"><%= link_to content_tag(:span, ''), [@channel, message], :confirm => "Are you sure?",
+        :method => :delete, :remote => true, :class => 'delete_post' %></span>
 <% end %>
 <%= raw [message.marked_up_content] %>
 </p>
