--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -1,5 +1,8 @@
+/* @override http://localhost:3000/stylesheets/global.css?1300764459 */
+
 * {margin: 0;padding: 0;}
 body{font:13px/1.5 'Helvetica Neue',Arial,'Liberation Sans',FreeSans,sans-serif; background: #f9f9f9;}
+html, body {width: 100%;height: 100%;}
 a:focus{outline:none}
 hr{border:0 #ccc solid;border-top-width:1px;clear:both;height:0}
 h1{font-size:25px}
@@ -12,7 +15,7 @@ ol{list-style:decimal}
 ul{list-style:disc;}
 li{margin-left:30px}
 a {
-	color: #347acb;
+	color: #026c70;
 	text-decoration: none;
 	font-weight: bold;
 }
@@ -33,40 +36,137 @@ input.text-input, textarea {
 
 #header {
 	padding: 0;
-	height: 40px;
-	background: #347acb;
+	height: 49px;
 	color: #ffffff;
 	float: left;
 	width: 100%;
+	background-color: #026c70;
+	background-image: -moz-linear-gradient(top, #6facae 0%,#3e8f92 3%, #026c70 100%);
+    background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #6facae),color-stop(0.03, #3e8f92),color-stop(1, #026c70));
+    filter:  progid:DXImageTransform.Microsoft.gradient(startColorStr='#fcfcfc', EndColorStr='#026c70');
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#fcfcfc', EndColorStr='#026c70')";
+    border-bottom: 1px solid #005053;
+}
+
+#header #logo {
+	background: url(/images/clusters.png) no-repeat top left;
+	width: 135px;
+	height: 25px;
+	display: block;
+	text-indent: -9999px;
+	float: left;
+	margin:11px 10px 0;
 }
 
 #header a {
 	color: #ffffff;
 }
 
-
-#header #header_left {
-	margin: 0;
-}
-
-#header_left h1 {
-	margin: 0;
-}
-
-#header_left h1 a{
-	color: #fff;
-	margin: 10px;
-	height: 20px;
-	font-size: 21px;
-	line-height: 21px;
+#header #nav {
+	height: 24px;
+	margin: 12px 0 0 20px;
 	float: left;
+	display: inline;
+}
+
+#header #nav li, #header #settings li {
+	float: left;
+	list-style: none;
+	margin-right: 10px;
+	margin-left: 0;
+	position: relative;
+}
+#header #nav li a.navlink, #header #settings a.dropdown {
+	padding: 4px 10px;
+	display: block;
+	background: url(/images/bg-navlink.png) repeat-x left top;
+	height: 14px;
+	line-height: 14px;
+	font-size: 12px;
+	text-shadow: #006467 0px 1px 1px;
+	border: 1px solid #006467;
+	-khtml-border-radius: 3px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+	-moz-box-shadow: 0px 1px 0px #31888a; 
+	-webkit-box-shadow: 0px 1px 0px #31888a; 
+	box-shadow: 0px 1px 0px #31888a; 
+}
+
+#header #nav li:hover a.navlink, #header #settings li:hover a.dropdown {
+	background: #026c70;
+}
+#header #nav li a.dropdown:hover {
+	border-bottom: none;
+	-khtml-border-radius: 3px 3px 0 0;
+	-moz-border-radius: 3px 3px 0 0;
+	-webkit-border-radius: 3px 3px 0 0;
+	border-radius: 3px 3px 0 0;
+}
+#header #nav li a.navlink:hover, #header #settings a.dropdown:hover {
+	text-decoration: none;
+}
+#header #nav li a.dropdown, #header #settings a.dropdown {
+	padding-right: 25px;
+}
+.dropdown span {
+	width: 7px;
+	height: 6px;
+	display: block;
+	background: url(/images/caret.png) no-repeat left top;
+	position: absolute;
+	top: 10px;
+	right: 10px;
+}
+
+#header #nav li ul, #header #settings li ul {
+	position: absolute;
+	top: 23px;
+	width: 10em;
+	text-shadow: #006467 0px 1px 1px;
+	border: 1px solid #006467;
+	background: #026c70;
+	z-index: 3;
+	clear: both;
+	width: 168px;
+	display: block;	
+	top: -9999px;
+	-khtml-border-radius: 0 3px 3px 3px;
+	-moz-border-radius: 0 3px 3px 3px;
+	-webkit-border-radius: 0 3px 3px 3px;
+	border-radius: 0 3px 3px 3px;
+}
+
+#header #nav li ul.sub li, #header #settings li ul.sub li {
+	margin: 0;
+	float: none;
 	display: block;
 }
-#header #header_right {
-	text-align: right;
+
+#header #nav li ul.sub li a, #header #settings li ul.sub li a {
+	padding: 5px;
+	font-size: 12px;
+	display: block;
+}
+#header #nav li ul.sub li a:hover, #header #settings li ul.sub li a:hover {
+	text-decoration: none;
+	background: #006467;
+}
+
+#header #settings {
 	float: right;
 	color: #fff;
-	padding: 10px;
+	margin: 12px 10px 0 0;
+}
+
+#header #settings li ul.sub {
+	right: 0px;
+	width: 100px;
+	-khtml-border-radius: 3px 0 3px 3px;
+	-moz-border-radius: 3px 0 3px 3px;
+	-webkit-border-radius: 3px 0 3px 3px;
+	border-radius: 3px 0 3px 3px;
 }
 
 #wrapper {
@@ -93,15 +193,68 @@ input.text-input, textarea {
 	text-shadow: #fff 0px 1px;
 }
 
+#sidebar #channel_nav {
+	padding: 10px 0;
+	margin-bottom: 10px;
+	border-bottom: 1px dotted #ccc;
+}
+#sidebar #channel_nav:after {content: ".";display: block; height: 0;clear: both;visibility: hidden;}
+
+
 #sidebar li {
 	list-style: none;
 	margin: 0;
-	padding: 5px;
-	border-bottom: 1px dotted #ccc;
+	padding: 0;
+	display: block;
+	clear: both;
 }
 
 #sidebar li a {
-	
+	font-size: 12px;
+	height: 14px;
+	line-height: 14px;
+	padding: 5px 0;
+	color: #6a6a6a;
+	display: block;
+}
+
+#sidebar li a span {
+	width: 16px;
+	height: 14px;
+	display: block;
+	float: left;
+	margin-right: 5px;
+	background: url(/images/icons-sidebar.png) no-repeat left top;
+}
+#sidebar li a.visual_map span {background-position: -16px 0;}
+#sidebar li a.notification_settings span {background-position: -32px 0;}
+#sidebar li a.members span {background-position: -48px 0;}
+
+#sidebar a.invite_people {
+	margin: 10px 0;
+	float: left;
+	padding: 3px;
+	clear: both;
+	width: 100px;
+	font-size: 12px;
+	line-height: 18px;
+	text-shadow: #28585b 0px -1px;
+	display: block;
+	border: 1px solid #005053;
+	color: #fff;
+	text-align: center;
+	-moz-box-shadow: 0px 1px 0px rgba(0,0,0, .1); 
+	-webkit-box-shadow: 0px 1px 0px rgba(0,0,0, .1); 
+	box-shadow: 0px 1px 0px rgba(0,0,0, .1); 
+	-khtml-border-radius: 3px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+	background-color: #136f73;
+	background-image: -moz-linear-gradient(top, #78adaf 0%,#499093 3%, #136f73 100%);
+    background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #78adaf),color-stop(0.03, #499093),color-stop(1, #136f73));
+    filter:  progid:DXImageTransform.Microsoft.gradient(startColorStr='#499093', EndColorStr='#136f73');
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#499093', EndColorStr='#136f73')";
 }
 
 #sidebar .channel_controls {
@@ -168,21 +321,9 @@ background-image: -moz-linear-gradient(top, #ffffff 0%,#f6f6f6 3%, #eeeeee 100%)
 /* Channel columns */
 
 #main_content {
-	width: 70%;
 	float: left;
 	background: #fff;
 	border-right: 1px solid #ccc;
-}
-
-#media_content {
-	width: 30%;
-	float: right;
-	height: 100%;
-	background: #f3f6f9;
-}
-
-#media_content p {
-	padding: 20px;
 }
 
 /* Channel Styles */
@@ -222,28 +363,39 @@ background-image: -moz-linear-gradient(top, #ffffff 0%,#f5f5f5 3%, #eeeeee 100%)
     color: #222222;
 }
 
-#message_post h2 {
-	font-size: 28px;
-	line-height: 28px;
-	padding-bottom: 15px;
+#post_area {
+	border-top: 1px solid #ccc;
+	position: fixed;
+	bottom: 0px;
+	left: 220px;
+	z-index:100;
+	height: 119px;
+	overflow: hidden;
+	background-color: #cccccc;
+background-image: -moz-linear-gradient(top, #ffffff 0%,#f9f9f9 1%, #f0f0f0 100%);
+    background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #ffffff),color-stop(0.01, #f9f9f9),color-stop(1, #f0f0f0));
+    filter:  progid:DXImageTransform.Microsoft.gradient(startColorStr='#f9f9f9', EndColorStr='#f0f0f0');
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#f9f9f9', EndColorStr='#f0f0f0')";
+	width: 100%;
+	-moz-box-shadow: 0px -1px 1px rgba(0,0,0, .1); 
+	-webkit-box-shadow: 0px -1px 1px rgba(0,0,0, .1); 
+	box-shadow: 0px -1px 1px rgba(0,0,0, .1); 
+}
+#post_area .post_area_inner {
 }
 
-#message_post {
-	padding: 20px;
-	border-bottom: 1px dotted #ccc;
+#post_area .post_area_inner form#new_message {
+	position: absolute;
+	width: 100%;
 }
-
-#message_post label {
-	color: #666;
-	font-weight: bold;
-	text-transform: uppercase;
-	font-size: 10px;
-}
-#message_post textarea {
+#post_area textarea {
+	margin: 20px 0 0 20px;
 	display: block;
-	height: 30px;
+	height: 20px;
+	font-size: 14px;
+	line-height: 20px;
 	padding: 5px;
-	width: 90%;
+	width:94%;
 	border: 1px solid #bbb;
 	-moz-box-shadow: inset 0px 1px 1px #eee; 
 	-webkit-box-shadow: inset 0px 1px 1px #eee; 
@@ -251,48 +403,54 @@ background-image: -moz-linear-gradient(top, #ffffff 0%,#f5f5f5 3%, #eeeeee 100%)
 	color: #999;
 }
 
-#message_post textarea:focus {
-	border: 1px solid #565656;
+#post_area textarea:focus {
+	border: 1px solid #777;
 	background: #f3f6fa;
 	color: #565656;
 }
 
-#message_post a.message_post {
+#post_area a.message_post {
 	display: block;
 	width: 50px;
+	padding: 3px;
+	margin: 10px 20px;
+	font-size: 12px;
+	line-height: 18px;
+	text-shadow: #28585b 0px -1px;
+	display: block;
+	border: 1px solid #005053;
+	color: #fff;
 	text-align: center;
-	padding: 2px 10px 3px;
-	background-color: #cccccc;
-background-image: -moz-linear-gradient(top, #80b2ea 0%,#5593da 3%, #347acb 100%);
-    background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #80b2ea),color-stop(0.03, #5593da),color-stop(1, #347acb));
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorStr='#5593da', EndColorStr='#347acb');
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#5593da', EndColorStr='#347acb')";
-    border: 1px solid #266ab9;
-    margin-top: 10px;
-    color: #fff;
-    text-shadow: #1a508e 0px -1px;
-    -khtml-border-radius: 25px;
-	-moz-border-radius: 25px;
-	-webkit-border-radius: 25px;
-	border-radius: 25px;
-	-moz-box-shadow: 0px 1px 0px #ddd; 
-	-webkit-box-shadow: 0px 1px 0px #ddd; 
-	box-shadow: 0px 1px 0px #ddd; 
-	cursor: pointer;
+	-moz-box-shadow: 0px 1px 0px rgba(0,0,0, .1); 
+	-webkit-box-shadow: 0px 1px 0px rgba(0,0,0, .1); 
+	box-shadow: 0px 1px 0px rgba(0,0,0, .1); 
+	-khtml-border-radius: 3px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+	background-color: #136f73;
+	background-image: -moz-linear-gradient(top, #78adaf 0%,#499093 3%, #136f73 100%);
+    background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #78adaf),color-stop(0.03, #499093),color-stop(1, #136f73));
+    filter:  progid:DXImageTransform.Microsoft.gradient(startColorStr='#499093', EndColorStr='#136f73');
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#499093', EndColorStr='#136f73')";
 }
-#message_post a.message_post:hover {
+#post_area a.message_post:hover {
 	text-decoration: none;
 	-moz-box-shadow: 0px 0px 4px #347acb; 
 	 -webkit-box-shadow: 0px 0px 4px #347acb; 
 	 box-shadow: 0px 0px 4px #347acb; 
 }
-#message_post a.message_post:active {
+#post_area a.message_post:active {
 	background: #347acb;
 }
 
-#message_list {
+#messages {
 	float: left;
 	width: 100%;
+	overflow-y: scroll;
+	height: 300px;
+	margin-bottom: 120px;
+	background: #fff;
 }
 
 #message_list .message_row {
@@ -319,7 +477,7 @@ background-image: -moz-linear-gradient(top, #80b2ea 0%,#5593da 3%, #347acb 100%)
 }
 #message_list .message_row .meta .username {
 	font-weight: bold;
-	color: #357bcb;
+	color: #026c70;
 	font-size: 12px;
 }
 #message_list .message_row .meta .date {
@@ -364,6 +522,39 @@ background-image: -moz-linear-gradient(top, #80b2ea 0%,#5593da 3%, #347acb 100%)
 	-webkit-border-radius: 25px;
 	border-radius: 25px;
 	color: #777;
+}
+
+.message_content a.delete_post {
+	display: block;
+	width: 12px;
+	height: 12px;
+	text-indent: -9999px;
+	position: absolute;
+	top: 0;
+	right: 0;
+	background: url(/images/icons-group.png) no-repeat -36px 0px;
+}
+
+.message_content a.delete_post:hover {background-position: -36px -12px;text-decoration: none;}
+.message_content a.delete_post:active {background-position: -36px -24px;}
+
+#more_link {
+	display: block;
+	text-align: center;
+	margin: 10px;
+	background-color: #cccccc;
+	border: 1px solid #ccc;
+background-image: -moz-linear-gradient(top, #ffffff 0%,#fcfcfc 3%, #fbfbfb 50%, #f4f4f4 50%, #f0f0f0 100%);
+    background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #ffffff),color-stop(0.03, #fcfcfc),color-stop(0.5, #fbfbfb),color-stop(0.5, #f4f4f4),color-stop(1, #f0f0f0));
+    filter:  progid:DXImageTransform.Microsoft.gradient(startColorStr='#fcfcfc', EndColorStr='#f0f0f0');
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#fcfcfc', EndColorStr='#f0f0f0')";
+    -moz-box-shadow: 0px 1px 0px rgba(0,0,0, .05); 
+	-webkit-box-shadow: 0px 1px 0px rgba(0,0,0, .05); 
+	box-shadow: 0px 1px 0px rgba(0,0,0, .05); 
+	-khtml-border-radius: 25px;
+	-moz-border-radius: 25px;
+	-webkit-border-radius: 25px;
+	border-radius: 25px;
 }
 
 /* Messages footer */
@@ -534,3 +725,4 @@ background-image: -moz-linear-gradient(top, #80b2ea 0%,#5593da 3%, #347acb 100%)
     border: 1px solid #266ab9;
     color: #fff;
 }
+
