updating js so chat window scrolls to bottom on new posts

--- a/app/views/channels/get_updates.js.erb
+++ b/app/views/channels/get_updates.js.erb
@@ -2,8 +2,7 @@
 
 //see if we already have this message
 var existing = $('#message_<%= m.id %>');
-if (existing.length == 0)
-{
+if (existing.length == 0){
     if (!weHaveFocus)
         startNotify('<%= m.poster %>');
 
@@ -12,13 +11,10 @@ if (existing.length == 0)
     var msg = $("<%= escape_javascript(render :partial => "channels/message", :object => m) %>");
     var latestContainer = null;
 
-    if (topPoster() == '<%= m.poster %>:')
-    {
+    if (topPoster() == '<%= m.poster %>:'){
         latestContainer = getLatestContainer();
         added = msg;
-    }
-    else
-    {
+    }else{
         latestContainer = makeContainer('<%= m.poster %>', '<%= m.pretty_updated_at %>');
         latestContainer.appendTo($('#message_list'));
         added = latestContainer;
@@ -28,6 +24,7 @@ if (existing.length == 0)
     msg.appendTo(ul);
 
     added.hide().fadeIn();
+    messageScrollBottom();
 }
 
 <% end %>
