--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -17,6 +17,7 @@ var ul = latestContainer.find('.message_content');
 msg.appendTo(ul);
 
 added.hide().fadeIn();
+messageScrollBottom();
 
 $('#msginput').val("");
 
