adding small styles for login and register states

--- a/app/views/layouts/channels.html.erb
+++ b/app/views/layouts/channels.html.erb
@@ -4,11 +4,11 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <% if @channel %>
-            <title>Channels: <%= @channel.name %></title>
+            <title>Clusters | <%= @channel.name %></title>
         <% else %>
-            <title>Channels</title>
+            <title>Clusters</title>
         <% end %>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width">
 	<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
