--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -4,17 +4,29 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title><%= controller.action_name %></title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width">
 	<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 	<%= stylesheet_link_tag 'reset' %>
 	<%= stylesheet_link_tag 'global' %>
+	<%= javascript_include_tag 'jquery' %>
 </head>
     <body>
-        <p style="color: green"><%= flash[:notice] %></p>
-        <p style="color: red"><%= flash[:warning] %></p>
-
-        <%= yield %>
+        <header id="header">
+        	<div id="header_left">
+        		<h1><%= link_to 'channels', channels_path, :id => 'logo' %></h1>
+        	</div>
+        	<ul id="settings">
+        	<li><%= link_to 'Login', :action => 'login' %></li>
+        	<li><%= link_to 'Sign Up', :action => 'register' %></li>
+        	</ul>
+        </header>
+        <!-- /end #header -->
+        <div id="wrapper">
+        	<%= flash[:notice] %>
+        	<%= flash[:warning] %>
+        	<%= yield %>
+        </div>
     </body>
 </html>
