--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -226,13 +226,13 @@ input.text-input, textarea {
 
 #signup:after, #login:after {content: ".";display: block; height: 0;clear: both;visibility: hidden;}
 
-#signup, #login h1 {
+#signup h1, #login h1 {
 	font-size: 36px;
 	line-height: 36px;
 	margin: 0 0 10px;
 	color: #222;
 }
-#signup, #login label {
+#signup label, #login label {
 	font-weight: bold;
 	font-size: 14px;
 	line-height: 36px;
@@ -241,14 +241,14 @@ input.text-input, textarea {
 	clear: both;
 	color: #666;
 }
-#signup, #login .text-input {
+#signup .text-input, #login .text-input {
 	width: 260px;
 	font-size: 14px;
 	height: 18px;
 	line-height: 18px;
 }
 
-#signup, #login p {
+#signup p, #login p {
 	color: #777;
 	margin: 10px 0;
 	clear: both;
@@ -282,12 +282,12 @@ input.text-input, textarea {
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#fedb90', EndColorStr='#fdb928')";
     cursor: pointer;
 }
-#signup .submit-button, #login .submit-button:hover {
+#signup .submit-button:hover, #login .submit-button:hover {
 	-moz-box-shadow: 0px 0px 4px #fdb928; 
 	 -webkit-box-shadow: 0px 0px 4px #fdb928; 
 	 box-shadow: 0px 0px 4px #fdb928; 
 }
-#signup .submit-button, #login .submit-button:active {
+#signup .submit-button:active, #login .submit-button:active {
 	background: #fdb928;
 }
 
