--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -56,14 +56,14 @@
             <% if @message_groups.size == 0 %>
                 <li class="message_row"><p class="no_messages">This channel has no messages.</p></li>
             <% end %>
-	    <% @message_groups.reverse.each do |group| %>
+	    <% @message_groups.each do |group| %>
                 <li class="message_row">
                 <div class="meta">
                     <p class="username"><%= group.poster %>:</p>
                     <p class="date"><%= group.date %></p>
                 </div>
                 <div class="message_content">
-                    <% group.messages.reverse.each do |m| %>
+                    <% group.messages.each do |m| %>
                         <%= render :partial => "message", :object => m %>
                     <% end %>
                 </div>
