--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -619,15 +619,17 @@ background-image: -moz-linear-gradient(top, #ffffff 0%,#f9f9f9 1%, #f0f0f0 100%)
 #message_list .message_content .branchpoint
 {
     font-weight:bold;
-    background: #026c70;
-    color: #fdb928;
+    border: solid 2px #026c70;
+    color: #026c70;
+    //color: #fdb928;
     padding:4px 0px 4px 4px;
     margin-bottom:4px;
 }
 
 #message_list .message_content .branchpoint a
 {
-    color: #fdb928;
+    //color: #fdb928;
+    color: #026c70;
 }
 
 #message_list .message_row .message_content p{
