--- a/app/views/channels/_message.erb
+++ b/app/views/channels/_message.erb
@@ -5,9 +5,10 @@ style="border-left:1px solid #347acb;"
 <% end %>
 >
 <% if message.poster == @user.alias %>
-    <span class="buttons"><%= link_to content_tag(:span, ''), [@channel, message], :confirm => "Are you sure?",
+    <span class="buttons">
+        <%= link_to content_tag(:span, ''), [@channel, message], :confirm => "Are you sure?",
         :method => :delete, :remote => true, :class => 'delete_post' %>
-        <%= link_to '>>', "/channels/#{@channel.id}?branch_id=#{message.id}" %>
+        <%= link_to content_tag(:span, ''), "/channels/#{@channel.id}?branch_id=#{message.id}", :class => 'make_branch' %>
     </span>
 <% end %>
 <%= raw [message.marked_up_content] %>
