--- a/app/views/channels/_message.erb
+++ b/app/views/channels/_message.erb
@@ -19,9 +19,9 @@ style="border-left:1px solid #347acb;"
     <% if branch_message %>
         <div class="branchpoint">
             <% if message.branch_link %>
-                <%= link_to "Show Conversation: #{branch_message.summarize}", "/channels/#{@channel.id}?branch_id=#{message.branch_link}" %>
+                <%= link_to "#{branch_message.summarize}", "/channels/#{@channel.id}?branch_id=#{message.branch_link}" %>
             <% else %>
-                <%= link_to "Show Conversation: #{branch_message.summarize}", "/channels/#{@channel.id}" %>
+                <%= link_to "#{branch_message.summarize}", "/channels/#{@channel.id}" %>
             <% end %>
         </div>
     <% end %>
