--- a/app/views/channels/_message.erb
+++ b/app/views/channels/_message.erb
@@ -4,14 +4,16 @@
 style="border-left:1px solid #347acb;"
 <% end %>
 >
-<% if message.poster == @user.alias %>
     <span class="buttons">
-        <%= link_to content_tag(:span, ''), [@channel, message], :confirm => "Are you sure?",
-        :method => :delete, :remote => true, :class => 'delete_post' %>
-        <%= link_to content_tag(:span, ''), "/channels/#{@channel.id}?branch_id=#{message.id}", :class => 'make_branch' %>
+        <% if message.poster == @user.alias %>
+            <%= link_to content_tag(:span, ''), [@channel, message], :confirm => "Are you sure?",
+                :method => :delete, :remote => true, :class => 'delete_post' %>
+        <% end %>
+        <% if not message.has_branch? %>
+            <%= link_to content_tag(:span, ''), "/channels/#{@channel.id}?branch_id=#{message.id}", :class => 'make_branch' %>
+        <% end %>
     </span>
-<% end %>
-<%= raw [message.marked_up_content] %>
+    <%= raw [message.marked_up_content] %>
 </p>
 
 <% if message.has_branch? %>
